--- a/todoapp/src/main/resources/application.properties
+++ b/todoapp/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=todoapp
 
-spring.datasource.url = jdbc:mysql://todo-database.cw9aekwys88i.us-east-1.rds.amazonaws.com:3306/tododatabase
-spring.datasource.username=admin
-spring.datasource.password=Abhinav234
+# spring.datasource.url = jdbc:mysql://todo-database.cw9aekwys88i.us-east-1.rds.amazonaws.com:3306/tododatabase
+# spring.datasource.username=admin
+# spring.datasource.password=Abhinav234
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# spring.jpa.show-sql=true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/tododatabase
+spring.datasource.username=root
+spring.datasource.password=Abhinav@2@3
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
